--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,8 @@ provider:
 functions:
   hello:
     handler: src/handler.hello
+    timeout: 60
+    memorySize: 128
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
