--- a/package.json
+++ b/package.json
@@ -17,6 +17,35 @@
   },
   "homepage": "https://github.com/Induwara-Nagodavithana/serverless-lambda#readme",
   "dependencies": {
-    "mongodb": "^4.11.0"
+    "@tensorflow/tfjs": "^3.9.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "*",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "^6.4.0",
+    "firebase-admin": "^9.11.1",
+    "fs": "0.0.1-security",
+    "jpickle": "^0.4.1",
+    "json-query": "^2.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.6",
+    "mysql2": "^2.2.5",
+    "node-pickle": "0.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "*",
+    "sav-reader": "^1.0.8",
+    "scikit-learn": "^0.1.0",
+    "sequelize": "^6.3.5",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.7"
   }
 }
