findAll user added

--- a/serverless.yml
+++ b/serverless.yml
@@ -20,17 +20,17 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: src/handler.hello
-    timeout: 30
-    memorySize: 128
+  # hello:
+  #   handler: src/handler.hello
+  #   timeout: 30
+  #   memorySize: 128
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-    events:
-      - httpApi:
-          path: /users
-          method: get
+    # events:
+    #   - httpApi:
+    #       path: /users
+    #       method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
@@ -83,6 +83,14 @@ functions:
       - httpApi:
           path: /users/{userId}
           method: delete
+  findAllUser:
+    handler: src/handler.findAllUser
+    timeout: 30
+    memorySize: 128
+    events:
+      - httpApi:
+          path: /users
+          method: get
 
 #    Define function environment variables here
 #    environment:
