--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Induwara-Nagodavithana/serverless-lambda#readme",
   "dependencies": {
+    "aws-sdk": "^2.1250.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "*",
     "cors": "^2.8.5",
-    "mongoose": "^6.0.6"
+    "mongoose": "^6.0.6",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
