--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,12 @@ provider:
   runtime: nodejs12.x
   stage: dev
   region: us-east-1
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "s3:PutObject"
+      Resource:
+        - "arn:aws:s3:::promo-deal-bucket/*"
 
 
 # you can define service wide environment variables
